# AmericanObesity

./: .gitignore  README.md  build-linux-debug.sh  build-linux-release.sh
Config/: DefaultEngine.ini  DefaultGame.ini
amerobe/: .gitignore  Kitchen Pixel Art.png.import  arena.gd  arena.gd.uid  clickbutt.gd  clickbutt.gd.uid  converted_soda_can_sprite.png.import  engine.gdextension  evolution.gd  icon.svg.import  main.tscn  node_2d.tscn  player.tscn  player.tscn3252358365.tmp  project.godot
amerobe/.godot/: extension_list.cfg
amerobe/Scenes/: evolution.tscn  main.tscn  node_2d.tscn  player.tscn  tier_2.tscn  title_screen.tscn
amerobe/Scripts/: arena.gd  scene_manager.gd  title_screen.gd  ui_theme.gd
amerobe/addons/ProceduralSceneGenerator2D/: plugin.gd.uid  procedural_scene_generator.gd.uid
amerobe/art/: Comical Kitchen.png.import  Kitchen Pixel Art.png.import  burger.png.import  converted_soda_can_sprite.png.import  final_red_soda_can_sprite.png.import  fries.png.import  kitchen_background_8bit.png.import  nikacado_obese.png.import  nikacado_obese_comp_nbg.png.import  nikacado_overweight.png.import  nikacado_overweight_comp.png.import  nikacado_skinny_comp.png.import  nikacado_super_obese.png.import  soda_can_64x64.png.import  soda_can_64x64_flash.png.import  start_screen.png.import
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/clicker_game/: mod.rs
